# xbps-sys

./: .gitmodules  Cargo.toml  LICENSE  LICENSE-3RDPARTY  README.md  build.rs  lib.rs  wrapper.h
.github/workflows/: publish.yml
