[package]
name = "xbps-sys"
version = "0.1.0+0.60.7"
authors = ["Naz <ndpm13@ch-naseem.com>"]
links = "xbps"
build = "build.rs"
repository = "https://git.ch-naseem.com/ndpm13/xbps-sys"
license = "BSD-2-Clause"
description = "Native bindings to the libxbps library"
edition = "2024"

[lib]
name = "xbps_sys"
path = "lib.rs"

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
